**************************************************************
** MovieJukebox Release note
***************************************************************

MovieJukebox 2.2 BETA
---------------------
  - Enhancement  #1560 Rescanning based on Jukebox Property changes
  - Fixed defect #1605 New IMDb site format breaks IMDb scanner (Updated for additional plot formats)
  - Fixed defect #1609 Only one fanart downloaded
  - Fixed defect #1616 KinoPoisk's plugin has problems when filename contains media-tags (like 'BLU-RAY')
  - Fixed defect #1618 IMDB writers contain "and ? more credits"
  - Enhancement  #1621 Use original title instead of title for skins.
  - Fixed defect #1622 Path change routine not updating library description.
  - Fixed defect #1623 Custom Fanart not found when 'mjb.scanner.hashpathdepth' enabled
  - Fixed defect #1627 ImdbPlugin - bug with plot
  - Fixed defect #1628 NFO Premiered date error

MovieJukebox 2.1
----------------
  - Enhancement   #941 Allow rounded corners on graphics
  - Enhancement  #1566 Would be nice to have plot in CSV listing
  - Fixed defect #1402 No Hebrew posters only plot
  - Enhancement  #1483 XBMC-style TV artwork support
  - Enhancement  #1500 More support for folder images, for programs such as meta browser and Ember Media Manager
  - Fixed defect #1503 Filmweb plugin doesn't work after filmweb site has been changed
  - Fixed defect #1506 TV Show episodes titles in IMDB, Filmweb plugin
  - Enhancement  #1507 Search the original movie title by PosterPlugins instead of localized title
  - Enhancement  #1512 Search the original movie title by FanartScanner instead of localized title
  - Fixed defect #1514 Kinopoisk plugin fix
  - Fixed defect #1518 Multi-part video with 10 or more parts uses the wrong NFO
  - Fixed defect #1522 SET Coverart no longer works properly
  - Fixed defect #1526 Small issue with TheMovieDB plugin
  - Enhancement  #1526 Allow regex in filename skip keywords